Contenu entreprise.html fini + débuts contact.html

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             <!--Liens vers autres pages-->
             <a href="index.html"> <strong> Home </strong> </a>
             <a href="entreprise.html"> <strong> Entreprise </strong> </a>
-            <a href=""> <strong> Realisations </strong> </a>
-            <a href=""> <strong> Contact </strong> </a>
+            <a href="realisations.html"> <strong> Realisations </strong> </a>
+            <a href="contact.html"> <strong> Contact </strong> </a>
 
             <!--Barre de recherche-->
-            <input type="text" placeholder="">
+            <input type="text" placeholder="Rechercher...">
 
         </nav>
     
